# arxiv-data

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
download/: download_kaggle_snapshot.py
src/download/: download_kaggle_snapshot.py
src/processing/: clean_arxiv_jsonl.py  convert_to_parquet.py  ingest_to_elasticsearch.py
